# nuara

./: .env.example  .gitattributes  .gitignore  README.md
backend/: Cargo.toml  README.md
backend/database/: README.md
backend/database/migrations/: 202606270001_initial_schema.sql  202606270002_menu_soft_delete.sql  202606280001_rename_alergen_to_alergi.sql  202606300001_kode_sppg_otomatis.sql  202606300002_katalog_bahan_dan_template_menu.sql  202606300003_variasi_template_menu.sql  202606300004_template_protein_hewani.sql  202607010001_durasi_video_60_detik.sql  202607010002_relasi_referensi_wilayah.sql
backend/database/referensi/: README.md
backend/database/seeds/: development.sql
backend/src/: config.rs  error.rs  lib.rs  main.rs  state.rs
backend/src/routes/: aduan.rs  autentikasi.rs  events.rs  katalog_menu.rs  kesehatan.rs  media_menu.rs  menu.rs  mod.rs  otorisasi.rs  sekolah.rs  smart_dinner.rs  unit_sppg.rs  upload.rs  wilayah.rs
backend/tests/: api_dasar.rs
docs/: api.md  database.md  identitas-visual.md  pengujian-integrasi.md
flutter_admin_web/: README.md  pubspec.yaml
flutter_admin_web/lib/: app.dart  main.dart
flutter_admin_web/lib/core/: providers.dart
flutter_admin_web/test/: widget_test.dart
flutter_admin_web/web/: flutter_bootstrap.js  index.html  manifest.json
flutter_mobile/: README.md  pubspec.yaml
flutter_mobile/android/app/: build.gradle.kts
flutter_mobile/ios/Runner.xcodeproj/: project.pbxproj
flutter_mobile/lib/: app.dart  main.dart
flutter_mobile/test/: widget_test.dart
scripts/: bersihkan-cache.ps1
(+47 files in other folders)
