[package]
name = "nuara_api"
version = "0.1.0"
edition = "2024"
description = "Web API untuk aplikasi Nutrisi Anak Nusantara"

[dependencies]
anyhow = "1"
async-stream = "0.3"
argon2 = "0.5.3"
axum = { version = "0.8.9", features = ["multipart"] }
chrono = "0.4"
dotenvy = "0.15"
jsonwebtoken = { version = "10.4.0", default-features = false, features = ["rust_crypto"] }
infer = "0.19"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.9.0", default-features = false, features = ["runtime-tokio", "tls-rustls", "mysql", "migrate", "macros", "chrono"] }
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
tower-http = { version = "0.7.0", features = ["cors", "trace", "fs"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
http-body-util = "0.1"
tower = { version = "0.5", features = ["util"] }

# Verifikasi Argon2 sangat lambat jika dijalankan tanpa optimasi pada build debug.
# Optimasi dibatasi pada crate kriptografi agar proses development tetap cepat.
[profile.dev.package.argon2]
opt-level = 3

[profile.dev.package.blake2]
opt-level = 3
